# comfyui_tagger

./: README.md  nodes.py  pyproject.toml
workflow/: batch_tagger_workflow.json
